Add app routing module

--- a/projeto/src/app/navbar/navbar.component.html
+++ b/projeto/src/app/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar color="primary" class="toolbar">
     <button mat-button class="button">Alocca</button>
-    <button mat-button class="button">Professores</button>
+    <button mat-button class="button" routerLink="/professors">Professores</button>
     <button mat-button class="button">Disciplinas</button>
 </mat-toolbar>
